# fuzzball

./: .gitignore  AUTHORS  INSTALL  LICENSE  Makefile.am  README  README-cgc.txt  README.md  README.options  autogen.sh  bin2vine.pl  build.sh  configure.ac  for-ocaml4.02.patch  for-ocaml4.08-unsafe-str.patch  fuzzball.sh  make-custom-ocamltop.sh  vex-r2188.patch  vex-r2701.patch  vex-r2719.patch  vex-r2737.patch  vex-r3206.patch  vex-r3260.patch  vex-r3400.patch  vex-vg3.18.1.patch  z3-reinstate-asIEEEBV.patch
config/: recursive.mk
examples/fp-small/: .gitignore  cmpps-test.c  f80-conv.c  fabs-test.c  fp-assoc.c  fp-cast16.c  fp-round.c  fp-ten.c  fpucw-test.c  fsin-test.c  fxam-test.c  max-test.c  sqrt-alg.c  sqrt-test.c
examples/newton-fp/: .gitignore  README  newton.c
examples/pcre-parser/: pcre-compile  pcre-compile.c
examples/simd-small/: .gitignore  mmx-64-op.c  sse2-128-op.c
examples/simple-func/: simple  simple.c
examples/strlen-compare/: run.sh  strlen-test  strlen-test.c
examples/zitser-s7/: README  run-fuzzball.sh  testcase  testcase.exploit  txt-dns-file-bad.c  txt-dns.h  txtdns-bad
exec_utils/: .gitignore  Makefile  fuzzball.ml  test_insn.ml  vinegrind.ml
execution/: .gitignore  Makefile  binary_decision_tree.ml  binary_decision_tree.mli  cgc_syscalls.ml  cgc_syscalls.mli  concrete_domain.ml  concrete_domain.mli  concrete_memory.ml  concrete_memory.mli  decision_tree.ml  decision_tree.mli  decree_loader.ml  decree_loader.mli  exec_assert_minder.ml  exec_assert_minder.mli  exec_domain.mli  exec_encode_veritesting_region.ml  exec_exceptions.ml  exec_exceptions.mli  exec_fuzzloop.ml  exec_fuzzloop.mli  exec_influence.ml  exec_influence.mli  exec_no_influence.ml  exec_no_influence.mli  exec_options.ml  exec_options.mli  exec_options_table.ml  exec_options_table.mli  exec_run_common.ml  exec_run_common.mli  exec_runloop.ml  exec_runloop.mli  exec_set_options.ml  exec_set_options.mli  exec_stats.ml  exec_stats.mli  exec_utils.ml  exec_utils.mli  (+56 more)
extras/gcore/: gdb-gcore-all-7.6.patch
extras/scripts/: annot-calls.pl  btor-as-stp.pl  decision-tree-vcg.pl
extras/x87-emu/: .gitignore  Makefile  errors.c  fpu_asm.h  fpu_aux.c  fpu_emu.h  fpu_entry.c  fpu_etc.c  fpu_system.h  fpu_trig.c  get_address.c  inline_call.S  load_store.c  reg_divide.c  reg_ld_str.c  tester.S
libasmir/: .gitignore  Makefile.am
libasmir/apps/: .gitignore  Makefile.am  disassembler.cpp  gen_thunks.cpp  insn_test.cpp  interpreter.cpp  ir_printer.cpp  ir_printer.h  print-ir.cpp
libasmir/include/: functions.ir  reg_decls.ir  thunks.ir
libasmir/patches/: VEX_3_2_3_setjmp.diff  vex-pushfw-popfw.diff
libasmir/src/: Makefile.am
libasmir/src/disasm/: asm_program.cpp  objdump.cpp
libasmir/src/include/: .gitignore  asm_program.h  common.h  debug.h  disasm-pp.h  exp.h  info.h  ir_program.h  irtoir-internal.h  irtoir.h  irvisitor.h  objdump.h  stmt.h  translate.h  vex_version.h.in  vexmem.h
libasmir/src/ir/: const_simplify_exp.cpp  exp.cpp  exp_c.cpp  stmt.cpp  stmt_c.cpp  translate.cpp
libasmir/src/util/: debug.cpp
libasmir/src/vex/: Notes  gen_thunks.cpp  irtoir-arm.cpp  irtoir-i386.cpp  irtoir-x64.cpp  irtoir.cpp  irtoir_c.cpp  vexir.cpp  vexmem.cpp
logging/: Makefile  eip_sequence_logger.ml  eip_sequence_logger.mli  indirect_target_logger.ml  indirect_target_logger.mli  log_configs.ml  logger_config.ml  loggers.ml  pov_xml.ml  test_logger.ml  text_logger.ml  yojson_list_logger.ml  yojson_logger.ml
m4/: ac_ocaml.m4
ocaml/: .gitignore  Makefile  OCamlMakefile  asmir.ml  asmir.mli  debug.ml  debug.mli  libasmir.idl  smt_lib2.ml  smt_lib2.mli  stp.ml  vine.ml  vine.mli  vine_absyn.ml  vine_absyn.mli  vine_compare.ml  vine_compare.mli  vine_grammar.mly  vine_lexer.mll  vine_opt.ml  vine_parser.ml  vine_parser.mli  vine_stpvc.ml  vine_stpvc.mli  vine_typecheck.ml  vine_typecheck.mli  vine_util.ml  vine_util.mli
stp/: c_interface.h  stp-2.2.0-true-ce.patch  stp-r1037-true-ce.patch  stp-r1052-true-ce.patch  stp-r1668-true-ce.patch  stp-r1673-true-ce+bison3.patch  stp-r792-true-ce.patch
stp/ocaml/: .gitignore  Makefile  OCamlMakefile  libstp.idl  libstp_regerrorhandler.c  stpvc.ml  stpvc.mli
stp/ocaml/tests/: leak_exp.ml  leak_type.ml  leak_vc.ml  test_libstp.ml
structs/: Makefile  build_assoc.ml  doset.ml  doset.mli  int64Array.ml  int64Array.mli  interval_tree.ml  interval_tree.mli
trace/: Makefile  temu_state.ml  temu_state.mli
useful-scripts/: decree-cwe-timing.sh
